fixed another typo

--- a/proteomics.ipynb
+++ b/proteomics.ipynb
@@ -20,7 +20,9 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import pandas as pd\n",
@@ -64,6 +66,7 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {
+    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
@@ -432,7 +435,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "###### First, I'd like to load the data and just play around with it."
+    "First, I'd like to load the data and just play around with it."
    ]
   },
   {
@@ -959,7 +962,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "###### Okay, now for some more advanced stuff."
+    "Okay, now for some more advanced stuff."
    ]
   },
   {
@@ -1011,8 +1014,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "###### Assuming each protein is a group, what are mean values for each 'Protein Name'?\n",
-    "###### groupby is a very useful method of a pandas DataFrame object that allows you to apply an arbitrary* function to subsets grouped with respect to a column in the DataFrame.\n",
+    "Assuming each protein is a group, what are mean values for each 'Protein Name'?\n",
+    "groupby is a very useful method of a pandas DataFrame object that allows you to apply an arbitrary function to subsets grouped with respect to a column in the DataFrame.\n",
     "\n",
     "```r.groupby('Protein Name').std()\n",
     "r.groupby('Protein Name').sum()```"
