added an exercise

--- a/proteomics.ipynb
+++ b/proteomics.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -36,14 +36,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "# This section has some test and auxiliary things and is unimportant.\n",
-    "# jupyter console --existing kernel-336e8e37-b35c-45cb-a1ab-75992f7b5377.json\n"
+    "# jupyter console --existing kernel-ddfb5aad-7753-4a77-981e-984dd2d34cad.json\n"
    ]
   },
   {
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true,
     "scrolled": true
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {
     "scrolled": false
    },
@@ -1017,8 +1017,9 @@
     "Assuming each protein is a group, what are mean values for each 'Protein Name'?\n",
     "groupby is a very useful method of a pandas DataFrame object that allows you to apply an arbitrary function to subsets grouped with respect to a column in the DataFrame.\n",
     "\n",
-    "```r.groupby('Protein Name').std()\n",
-    "r.groupby('Protein Name').sum()```"
+    "> r.groupby('Protein Name').std()\n",
+    "\n",
+    "> r.groupby('Protein Name').sum()"
    ]
   },
   {
@@ -2349,6 +2350,47 @@
     "# Merge the tables:\n",
     "r.merge(means, how='inner', left_on='Protein Name', right_index=True,\n",
     "        suffixes = (\" (mean)\", \"\")).head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "## Exercise\n",
+    "Write a function that takes in a list as an argument and returns a mean of this list."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def mean(l):\n",
+    "    # Write stuff here\n",
+    "    # mu is a single number\n",
+    "    return mu"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This will be very useful later. You can write basically any function that takes in a list-like argument and does something with it, and plug it in the pandas .apply() method, like so:\n",
+    "\n",
+    "> d.apply(lambda x: my_function(x))\n",
+    "\n",
+    "For example, with numpy:\n",
+    "\n",
+    "> d.apply(lambda x: np.mean(x))\n",
+    "\n",
+    "(lambdas are tiny temporary functions that are defined only for a specific porpose.)\n",
+    "\n",
+    "Try it with the mean() function you wrote!"
    ]
   },
   {
